--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,30 @@
+/* font-family: "Nerko One", sans-serif;
+    text-align: center; */
+
+html, body {
+    height: 100%;
+}
+
 body {
     font-family: "Nerko One", sans-serif;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+body, h1 {
+    margin: 0;
 }
 
 header {
-    background-color: #be2528;
-    color: white;
+    width: 100%;
+    color: #f2c304;
+    -webkit-text-stroke: 1px #2e67b0;
+    text-transform: uppercase;
+}
+
+.content {
+    flex: 1 0 auto;
 }
 
 h1 {
@@ -16,11 +35,32 @@ p {
     font-size: 170%;
 }
 
-footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: ;
-    background-color: #be2528;
-    color: white;
+.btn {
+    font-family: "Nerko One", sans-serif;
+    font-size: 100%;
+    width: 5em;
+}
+
+.btn--blue {
+    background-color: aqua;
+}
+
+.btn--brown {
+    background-color: burlywood;
+}
+
+.btn--red {
+    background-color: red;
+}
+
+.btn--green {
+    background-color: green;
+}
+
+.btn--orange {
+    background-color: orange;
+}
+
+.footer {
+    flex-shrink: 0;
 }
