--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,4 @@
-/* font-family: "Nerko One", sans-serif;
-    text-align: center; */
-
+/* Making the header stay at the top of the body and styling them */
 html, body {
     height: 100%;
 }
@@ -27,18 +25,35 @@ header {
     flex: 1 0 auto;
 }
 
+/* Logo and font sizes */
 h1 {
-    font-size: 350%;
+    font-size: 380%;
 }
 
 p {
     font-size: 170%;
 }
 
+/* Flexbox container to center image and keep it responsive */
+.type-chart-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.type-chart-container img {
+    display: block;
+    width: 100%;
+    max-width: 800px; /*actual image width or width you want it to be*/
+    height: auto; /* maintain aspect ratio*/
+    margin: auto; /*centering of image*/
+}
+
+/* Styling the buttons */
 .btn {
     font-family: "Nerko One", sans-serif;
-    font-size: 100%;
-    width: 5em;
+    font-size: 110%;
+    width: 10em;
 }
 
 .btn--blue {
@@ -66,6 +81,7 @@ p {
     color: white;
 }
 
+/* Making sure the footer stays at the bottom of the page */
 .footer {
     flex-shrink: 0;
 }
