--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,10 +116,6 @@ p {
     h1 {
         font-size: 300%;
     }
-    
-    p {
-        font-size: 120%;
-    }
 
     .btn {
         font-size: 100%;
@@ -127,8 +123,24 @@ p {
     
 }
 
+/* Screen size for iPad Air */
+@media screen and (max-width: 820px) {
+    h1 {
+        font-size: 290%;
+    }
+
+    p {
+        font-size: 120%;
+    }
+
+}
+
 /* Screen size for Surface Duo */
 @media screen and (max-width: 540px) {
+    h1 {
+        font-size: 270%;
+    }
+    
     .btn {
         font-size: 90%;
     }
@@ -163,10 +175,18 @@ p {
 
 }
 
+/* Screen size for iPhone 4 */
+@media screen and (max-width: 320px) {
+    h1 {
+        font-size: 240%;
+    }
+
+}
+
 /* Screen size for Galaxy Fold */
 @media screen and (max-width: 280px) {
     h1 {
-        font-size: 240%;
+        font-size: 230%;
     }
 
     p {
