--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,8 @@ p {
 /* Styling the buttons */
 .btn {
     font-family: "Nerko One", sans-serif;
-    font-size: 110%;
+    font-size: 160%;
+    padding: 1%;
     margin: 1%;
     width: 8%;
 }
@@ -130,7 +131,7 @@ p {
     }
 
     .btn {
-        font-size: 100%;
+        font-size: 140%;
     }
     
 }
@@ -154,7 +155,7 @@ p {
     }
     
     .btn {
-        font-size: 90%;
+        font-size: 130%;
     }
     
 }
@@ -174,7 +175,7 @@ p {
     }
 
     .btn {
-        font-size: 80%;
+        font-size: 120%;
     }
     
 }
@@ -206,7 +207,7 @@ p {
     }
 
     .btn {
-        font-size: 70%;
+        font-size: 100%;
     }
     
 }
