--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,11 +105,12 @@ p {
     width: 90%;
     padding-left: 5%;
     padding-right: 5%;
+    margin-bottom: 3%;
 }
 
 .result-area {
-    background-color: lightblue;
-    border: 1px solid black;
+    background-color: #add9e6;
+    border: 1px solid #000000;
     width: 50%;
     margin: auto;
 }
